force-app/main/default/objects/Research_Centre__c/Research_Centre__c.object-meta.xml
<CustomObject>
    <label>Research Centre</label>
    <nameField>
        <displayFormat>RC-{00000}</displayFormat>
        <label>Research Centre Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Research Centres</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>