force-app/main/default/objects/Research_Centre__c/fields/I_RS_Organisation__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Organisation__c</fullName>
    <label>Organisation</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type__c</field>
            <operation>equals</operation>
            <value>Research Centre/Institute</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>La Trobe Organisation Unit</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Research Centres</relationshipLabel>
    <relationshipName>Research_Centres</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>