force-app/main/default/objects/Research_Centre__c/fields/I_RS_Project_Proposal__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Project_Proposal__c</fullName>
    <label>Project Proposal</label>
    <referenceTo>Project_Proposal__c</referenceTo>
    <relationshipLabel>Research Centres</relationshipLabel>
    <relationshipName>Research_Centres</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>