force-app/main/default/objects/Research_Centre__c/fields/I_RS_Research_Centre_Director__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Research_Centre_Director__c</fullName>
    <formula>I_RS_Organisation__r.I_RS_Organisation_Head__r.FirstName &amp; &apos; &apos; &amp; I_RS_Organisation__r.I_RS_Organisation_Head__r.LastName</formula>
    <label>Research Centre Director</label>
    <type>Text</type>
</CustomField>