force-app/main/default/objects/Research_Centre__c/fields/I_RS_Research_Centre_Director_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Research_Centre_Director_Contact_ID__c</fullName>
    <formula>I_RS_Organisation__r.I_RS_Organisation_Head__r.ContactId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Research Centre Director Contact ID</label>
    <type>Text</type>
</CustomField>