force-app/main/default/objects/Research_Centre__c/validationRules/Organisation_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Organisation_Changed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISNEW()),
(ISCHANGED( I_RS_Organisation__c ))
)</errorConditionFormula>
    <errorDisplayField>I_RS_Organisation__c</errorDisplayField>
    <errorMessage>Cannot change Research Centre</errorMessage>
</ValidationRule>