force-app/main/default/objects/Research_Centre__c/validationRules/Project_is_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_is_changed</fullName>
    <active>true</active>
    <description>Validation rule to stop user from changing Project Proposal</description>
    <errorConditionFormula>AND(
NOT( ISNEW() ),
ISCHANGED( I_RS_Project_Proposal__c ) 
)</errorConditionFormula>
    <errorDisplayField>I_RS_Project_Proposal__c</errorDisplayField>
    <errorMessage>Cannot Change Project Proposal</errorMessage>
</ValidationRule>